# hotspeech

./: .SRCINFO  .gitignore  AUR-README.md  AUR_PACKAGE_STATUS.md  AUR_SUBMISSION_GUIDE.md  CHANGELOG.md  LICENSE  MANIFEST.in  PKGBUILD  README.md  TESTING.md  hotspeech-setup  hotspeech.install  install.sh  pyproject.toml  setup.py  simple-verify.sh  start_recording.sh  stop_recording.sh  submit-to-aur.sh  test-aur-build.sh  test-installation.sh  verify-aur-package.sh
.github/workflows/: release.yml
aur-package/: .SRCINFO  PKGBUILD  hotspeech.desktop  hotspeech.install  hotspeech.service
hotspeech/: README.md  cli.py  config.toml  main.py  pyproject.toml  requirements.txt
hotspeech/app/: __init__.py  audio.py  clipboard.py  db.py  transcriber.py
hotspeech/app/webui/: __init__.py  routes.py
hotspeech/app/webui/static/: style.css
hotspeech/app/webui/templates/: index.html
