[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotspeech"
version = "1.0.0"
description = "Voice recording and transcription tool with hotkey support and web interface"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "atopheim", email = "torbjornop@gmail.com" }]
keywords = ["voice", "recording", "transcription", "speech", "whisper", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "openai>=1.0.0",
    "toml>=0.10.2",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/atopheim/hotspeech"
Repository = "https://github.com/atopheim/hotspeech"
Issues = "https://github.com/atopheim/hotspeech/issues"

[project.scripts]
hotspeech = "hotspeech.main:main"

[tool.setuptools.packages.find]
include = ["hotspeech*"]

[tool.setuptools.package-data]
hotspeech = ["config.toml", "app/webui/templates/*.html", "app/webui/static/*"]
