[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotspeech"
version = "1.0.0"
description = "Simple voice recording and transcription tool using OpenAI Whisper"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.9"
dependencies = [
    "toml>=0.10.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.5",
    "openai>=1.0.0",
    "pydantic>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hotspeech"
Repository = "https://github.com/yourusername/hotspeech"
Issues = "https://github.com/yourusername/hotspeech/issues"

[project.scripts]
hotspeech = "hotspeech.main:main"
hotspeech-cli = "hotspeech.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hotspeech*"]

[tool.setuptools.package-data]
hotspeech = ["*.toml", "app/**/*", "webui/**/*"]
